--- a/src/utils/testHelpers/testHTML-A.html
+++ b/src/utils/testHelpers/testHTML-A.html
@@ -6,4 +6,4 @@
 <span class="MuiTypography-root MuiTypography-caption">Markdown h6 maps to Typography caption</span>
 <p class="MuiTypography-root MuiTypography-body2 MuiTypography-paragraph">Our humble paragraph uses Typography body2. And here is...</p>
 <p class="MuiTypography-root MuiTypography-body2 MuiTypography-paragraph">... another paragraph!</p>
-<p class="MuiTypography-root MuiTypography-body2 MuiTypography-paragraph">And a <strong>bold</strong>, then <em>italicized</em>, word with a</p></div>
+<p class="MuiTypography-root MuiTypography-body2 MuiTypography-paragraph">And a <strong>bold</strong>, then <em>italicized</em>, word with a <a rel="noopener noreferrer" target="_blank" href="https://example.com" class="makeStyles-anchor-1">link here</a>.</p></div>
