Fix Markdown tests

--- a/src/utils/testHelpers/testHTML-A.html
+++ b/src/utils/testHelpers/testHTML-A.html
@@ -1,9 +1,9 @@
-<div><h3 class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom">Markdown h1 maps to Typography h3</h3>
-<h4 class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom">Markdown h2 maps to Typography h4</h4>
-<h5 class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom">Markdown h3 maps to Typography h5</h5>
-<h6 class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom">Markdown h4 maps to Typography h6</h6>
-<p class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom">Markdown h5 maps to Typography body1</p>
-<span class="MuiTypography-root MuiTypography-caption">Markdown h6 maps to Typography caption</span>
-<p class="MuiTypography-root MuiTypography-body1">Our humble paragraph uses Typography body1. And here is...</p>
-<p class="MuiTypography-root MuiTypography-body1">... another paragraph!</p>
-<p class="MuiTypography-root MuiTypography-body1">And a <strong>bold</strong>, then <em>italicized</em>, word with a <a rel="noopener noreferrer" target="_blank" href="https://example.com" class="makeStyles-anchor-1">link here</a>.</p></div>
+<div><h3 class="([^"]|\\")*">Markdown h1 maps to Typography h3</h3>
+<h4 class="([^"]|\\")*">Markdown h2 maps to Typography h4</h4>
+<h5 class="([^"]|\\")*">Markdown h3 maps to Typography h5</h5>
+<h6 class="([^"]|\\")*">Markdown h4 maps to Typography h6</h6>
+<p class="([^"]|\\")*">Markdown h5 maps to Typography body1</p>
+<span class="([^"]|\\")*">Markdown h6 maps to Typography caption</span>
+<p class="([^"]|\\")*">Our humble paragraph uses Typography body1. And here is...</p>
+<p class="([^"]|\\")*">... another paragraph!</p>
+<p class="([^"]|\\")*">And a <strong>bold</strong>, then <em>italicized</em>, word with a <a rel="noopener noreferrer" target="_blank" href="https://example.com" class="([^"]|\\")*">link here</a>.</p></div>
