--- a/src/utils/testHelpers/testHTML-A.html
+++ b/src/utils/testHelpers/testHTML-A.html
@@ -6,4 +6,4 @@
 <span class="([^"]|\\")*">Markdown h6 maps to Typography caption</span>
 <p class="([^"]|\\")*">Our humble paragraph uses Typography body1. And here is...</p>
 <p class="([^"]|\\")*">... another paragraph!</p>
-<p class="([^"]|\\")*">And a <strong>bold</strong>, then <em>italicized</em>, word with a <a class="([^"]|\\")*" rel="noopener noreferrer" target="_blank" href="https://example.com">link here</a>.</p></div>
+<p class="([^"]|\\")*">And a <strong>bold</strong>, then <em>italicized</em>, word with a <a rel="noopener noreferrer" target="_blank" href="https://example.com" class="([^"]|\\")*">link here</a>.</p></div>
